Clean code and begin implementing selection changes symbology updates

--- a/ProAppModule1/ProAppModule1.csproj
+++ b/ProAppModule1/ProAppModule1.csproj
@@ -134,6 +134,11 @@
   <ItemGroup>
     <AddInContent Include="DarkImages\GenericButtonPurple32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="OH_blocks.xml">
+      <SubType>Designer</SubType>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!--
   PackageAction can be:
